修改页面格式

--- a/_posts/2015-03-17-git-usage.md
+++ b/_posts/2015-03-17-git-usage.md
@@ -1,8 +1,17 @@
 ---
 layout: post
 title: git用法记录
-tags: linux,other
+tags: linux other
 ---
+
+记录一些git的常用命令
+
+----- 
+
+
+* 将仓库连接到某个远程服务器
+
+		git remote add origin <server>
 
 * 还原文件的本地修改.
 
@@ -12,6 +21,11 @@ tags: linux,other
 
 		git reset HEAD <file>...
 
+* 从服务器上获取最新的版本历史覆盖本地修改
+
+		git fetch origin
+		git reset --hard origin/master
+
 * 修改最后一次提交信息。
 
 		git commit --amend
@@ -20,7 +34,21 @@ tags: linux,other
 
 		git reset HEAD^
 
+* 新建一个分支并切换过去
 
+		git checkout -b xxxx
+
+* 删除分支
+
+		git branch -d xxxx
+
+* 向远程服务器推送分支
+
+		git push origin xxxx
+
+* 合并分支
+
+		git merge xxx
 --------------------
 
 
