测试代码高亮

--- a/_posts/2013-10-01-SOLID.md
+++ b/_posts/2013-10-01-SOLID.md
@@ -55,7 +55,7 @@ tags: java
 
 例如:在Spring中，`ApplicationContext`拥有事件发布的功能，但是事件发布功能并不是`ApplicationContext`的主要职责所在，framework提供了一个单独的事件发布者`ApplicationEventPublisher`来提供事件发布功能，而`ApplicationEventPublisher`仅仅提供了时间发布的功能，不包含任意其他的职责。
 
-
+```java
 	package org.springframework.context;
 
 	/**
@@ -81,7 +81,7 @@ tags: java
 		void publishEvent(ApplicationEvent event);
 	
 	}
-
+```
 
 ###开放封闭原则
 在面向对象编程领域中，开放封闭原则规定“软件中的对象（类，模块，函数等等）应该对于扩展是开放的，但是对于修改是封闭的”，这意味着一个实体是允许在不改变它的源代码的前提下变更它的行为。该特性在产品化的环境中是特别有价值的，在这种环境中，改变源代码需要代码审查，单元测试以及诸如此类的用以确保产品使用质量的过程。遵循这种原则的代码在扩展时并不发生改变，因此无需上述的过程。
