--- a/_posts/2015-03-17-git-usage.md
+++ b/_posts/2015-03-17-git-usage.md
@@ -52,22 +52,38 @@ tags: linux other
 
 * 对比
 	* 查看尚未暂存的更改(工作目录(Working)和暂存区(index)之间的差异)
-				git diff
+
+			git diff
+
 	* 查看已经暂存起来的文件(staged)和上次提交时的快照之间(HEAD)的差异
-				git diff --cached
-	    		git diff --staged
+
+			git diff --cached
+    		git diff --staged
+
 	* 显示工作版本(Working)和HEAD的差别
+
 			git diff HEAD
-	* 查看简单的diff结果，可以加上--stat参数
+
+	* 查看简单的diff结果，可以加上`--stat`参数
+
 			git diff --stat
+
 	* 查看某个文件的变化
+
 			git diff -- file
+
 	* 比较上次提交和上上次提交
+
 			git diff HEAD^ HEAD
+
 	* 比较两个历史版本之间的差异
+
 			git diff SHA1 SHA2
+
 	* **示例:** 查看`a.txt`文件最新提交的修改内容
+
 			git diff HEAD^ -- a.txt
+
 --------------------
 
 
