--- a/_posts/2015-03-17-git-usage.md
+++ b/_posts/2015-03-17-git-usage.md
@@ -50,6 +50,36 @@ tags: linux other
 
 		git merge xxx
 
+* 合并单个提交到当前分支
+
+		 git cherry-pick commitxxxxxx
+
+* 合并多个提交.
+	
+假设有如下图所示两个分支,想要将test分支的2,3,4提交合并到master上,命令如下:
+	
+		          1---2---3---4---5 test
+		         /
+	    a---b---c---d---e---f master
+
+		git checkout test
+		git checkout -b newbranch 4
+		git rebase --onto master 2^
+		git checkout master
+		git merge newbranch
+		git branch -d newbranch
+
+
+合并后的分支如下:
+
+
+		          1---2---3---4---5 test
+		         /
+	    a---b---c---d---e---f---2`---3`---4` master
+		
+
+
+
 * 对比
 	* 查看尚未暂存的更改(工作目录(Working)和暂存区(index)之间的差异)
 
