--- a/_posts/2015-03-17-git-usage.md
+++ b/_posts/2015-03-17-git-usage.md
@@ -136,3 +136,18 @@ tags: linux other
 * 回退到上一次提交的状态，按照某一次的commit完全反向的进行一次commit.(代码回滚到上个版本，并提交git)
 
 		git revert HEAD
+
+
+----
+
+* 删除本地失效的远端分支列表
+
+        git remote prune origin
+
+* 同步远端的tag
+        
+        git tag -l | xargs git tag -d && git fetch origin --tags
+
+* 显示远端的详细信息
+
+        git remote show <远端名>
